# gsd-tools

grype-db/: README.md  parse-grype-sqlite.py
gsd-bot/: Dockerfile
gsd-libraries/python/: pyproject.toml
json-ld/: README.md  UVI-2014-0160.jsonld  UVI-2021-1001492.jsonld  UVI-2021-38208.jsonld
json-ld/npm/: load-38208.js  package.json
securitylist/src/: update_repo.py
securitylist/src/securitylist/: CVE.py
webform/: package-lock.json  package.json
