[tool.poetry]
name = "gsd-database"
version = "0.0.0"
authors = [
  "Josh Buker <crypto@joshbuker.com>",
  "Josh Bressers <josh@bress.net>",
]
description = "Provides an easy way to interact with the GSD Database via Python."
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/cloudsecurityalliance/gsd-tools"
"Bug Tracker" = "https://github.com/cloudsecurityalliance/gsd-tools/issues"

[tool.poetry.dependencies]
python = ">=3.7"
requests = "^2.31.0"
gitpython = "^3.1.32"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

